# mean-opinion-score

./: .gitignore  CITATION.cff  MANIFEST.in  Pipfile  README.md  pyproject.toml
src/mean_opinion_score/: __init__.py  calculation.py  mos_variance.py
src/mean_opinion_score_tests/: helper.py
src/mean_opinion_score_tests/calculation_py/: test_blizzard_results.py  test_get_ci95_blizzard_results.py  test_get_ci95_default_blizzard_results.py  test_get_custom_variance.py  test_get_mean_vertical_variance.py  test_get_mos.py  test_get_mos_blizzard_results.py  test_get_non_nan_count.py  test_get_v_mu.py  test_matlab_tinv.py
src/mean_opinion_score_tests/mos_variance_py/: test_compute_alg_mos_ci95.py  test_compute_mos.py  test_get_custom_variance.py  test_get_mean_vertical_variance.py  test_get_v_mu.py  test_matlab_tinv.py  test_non_nan_count.py
src/mean_opinion_score_tests/res/: blizzard_crowdmos1_hp.json  blizzard_crowdmos2_hp.json  blizzard_crowdmos2_ls.json  blizzard_online_volunteers.json  blizzard_paid_participants.json
